# RemoteCamera

./: .gitignore  CMakeLists.txt  Client.cpp  Client.hpp  README.md  RemoteCamera.cpp  RemoteCamera.hpp  RunClient.cpp  RunRemoteCamera.cpp  RunSender.cpp  Sender.cpp  Sender.hpp  dialog.cpp  dialog.h  dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
doc/: LoadDll.py  Note.md  流程图.drawio
inc/Dongle/: Dongle.hpp
inc/base/: RemoteCamera.hpp
inc/ui/: activatedialog.h  mainwindow.h
include/base/: Client.hpp  Sender.hpp
include/ui/: mainwindow.h  pathdialog.h
output/Debug/: config.json
output/RelWithDebInfo/: config.json
output/Release/: config.json
output/resource/: config.json  favicon.rc
src/: CMakeLists.txt  RunClient.cpp  RunRemoteCamera.cpp  RunSender.cpp  main.cpp
src/Dongle/: Dongle.cpp
src/base/: Client.cpp  RemoteCamera.cpp  Sender.cpp
src/ui/: activatedialog.cpp  activatedialog.ui  mainwindow.cpp  mainwindow.ui  pathdialog.cpp  pathdialog.ui
